# hackage-downloads

./: .gitignore  .travis.yml  .vendor_urls  Dockerfile  Makefile  README.md  dashboard.js  hackage-downloads.cabal  stack.yaml
src/: HackageDownloads.hs  Main.hs
