name:                hackage-downloads
version:             0.1.0.0
synopsis:            Pulls Hackage downloads for packages.
-- description:         
homepage:            https://github.com/haskellbr/hackage-downloads
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable hackage-downloads
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       aeson
                     , bytestring
                     , base >=4.8 && <4.9
                     , scalpel
                     , time
  hs-source-dirs:      src
                     , bin
  default-language:    Haskell2010

library
  exposed-modules:     HackageDownloads
  build-depends:       aeson
                     , base >=4.8 && <4.9
                     , scalpel
  hs-source-dirs:      src
                     , bin
  default-language:    Haskell2010