name:                hackage-downloads
version:             0.1.0.0
synopsis:            Pulls Hackage downloads for packages.
-- description:         
homepage:            https://github.com/haskellbr/hackage-downloads
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           Copyright (c) 2015 Pedro Tacla Yamada
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hackage-downloads
  main-is:             Main.hs
  build-depends:       aeson
                     , base >=4.8 && <4.9
                     , bytestring
                     , scalpel
                     , time
  hs-source-dirs:      src
                     , bin
  default-language:    Haskell2010

executable hackage-downloads-api
  main-is:             HackageDownloadsApi.hs
  build-depends:       Spock >= 0.10
                     , Spock-worker
                     , aeson
                     , base >=4.8 && <4.9
                     , bytestring
                     , mtl >= 2.2.1
                     , scalpel
                     , stm >= 2.4.4.1
                     , time
                     , transformers >= 0.4.2.0
  hs-source-dirs:      src
                     , bin
  default-language:    Haskell2010

library
  exposed-modules:     HackageDownloads
  build-depends:       aeson
                     , base >=4.8 && <4.9
                     , scalpel
  hs-source-dirs:      src
                     , bin
  default-language:    Haskell2010